# lazy-search

./: 404.html  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
.github/workflows/: python.yml
reference/SUMMARY/: index.html
reference/lazy_search/__init__/: index.html
reference/lazy_search/cli/: index.html
reference/lazy_search/models/: index.html
reference/lazy_search/news_fetcher/: index.html
reference/lazy_search/nlp/: index.html
reference/lazy_search/utils/: index.html
search/: search_index.json
src/lazy_search/: cli.py  models.py  news_fetcher.py  nlp.py  utils.py
tests/: test_data.py  test_fact.py  test_news_fetcher.py  test_nlp.py  test_utils.py
